# api-hub-example/swagger/organization/api.yaml
@@ -594,6 +594,104 @@ paths:
       x-fn-crud-operation:
         op: POST
         type: Manager
+  /managers/{managerId}/hierarchy:
+    get:
+      tags:
+      - Manager
+      operationId: getManagerHierarchy
+      parameters:
+      - name: managerId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: Successfully retrieved objects
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ObjectReadByIdResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Unauthorized request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "403":
+          description: Forbidden request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Server side error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /managers/{managerId}/reportees:
+    get:
+      tags:
+      - Manager
+      operationId: getManagerReportees
+      parameters:
+      - name: managerId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: Successfully retrieved employees
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EmployeeArrayResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Unauthorized request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "403":
+          description: Forbidden request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Server side error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /organization/{id}:
     get:
       tags:
@@ -986,6 +1084,26 @@ components:
       x-fn-base-dto-type: NO_OP
       x-fn-jpa-entity:
         embeddable: true
+    ArrayResponseBase:
+      type: object
+      properties:
+        totalHits:
+          type: integer
+          format: int32
+          x-fn-total-hits: true
+        totalPages:
+          type: integer
+          format: int32
+          x-fn-total-pages: true
+        hasMore:
+          type: boolean
+          x-fn-has-more: true
+        message:
+          type: string
+      discriminator:
+        propertyName: type
+      x-fn-base-dto-type: NO_OP
+      x-fn-response-wrapper: data
     ApiResponseBase:
       required:
       - message
@@ -1135,6 +1253,17 @@ components:
       - $ref: "#/components/schemas/BaseAuditFields"
       x-fn-jpa-entity:
         name: employees
+    EmployeeArrayResponse:
+      allOf:
+      - $ref: "#/components/schemas/ArrayResponseBase"
+      - type: object
+        properties:
+          data:
+            uniqueItems: false
+            type: array
+            items:
+              $ref: "#/components/schemas/Employee"
+      x-fn-wrapper-field: data
     OrganizationResponse:
       allOf:
       - $ref: "#/components/schemas/ApiResponseBase"
